# killstreak

./: .gitignore  LICENSE  README.md  build.sh  demo.go  demo.json  go.mod  go.sum  install.sh  killstreak  main.go  main_unix.go  main_windows.go  pack.sh  player.go  processing.go  util.go  watch_unix.go  watch_windows.go
internal/: demo.go  io.go  player.go  processing.go  util.go  watch.go  watch_unix.go  watch_windows.go
lib/: rust.h
rust/: Cargo.toml
rust/src/: cut_demo.rs  lib.rs  parse_demo.rs
scripts/: build.sh
test/: _events.txt
test_data/: _events.txt
test_data/windows/: KillStreaks copy.txt  KillStreaks.txt
