[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf-demo-parser = { git = "https://github.com/demostf/parser", rev = "5f6600c" }
edit = { git = "https://github.com/demostf/edit/", rev = "8504cd4" }
ffi-convert = "0.6.1"
ffi-convert-derive = "0.6.1"
